# sensor_fusion

./: .gitignore  .gitignore~  README.md
bagfiles/: csv.sh  movement.bag  ten_sec.bag
bagfiles/exps/: circle18dia__odomCombined.csv  circle18dia__odometry_filtered_map.csv  circle18diagpsloss__odomCombined.csv  circle18diagpsloss__odometry_filtered_map.csv  linear60__odomCombined.csv  linear60__odometry_filtered_map.csv  linear60gpsloss__odomCombined.csv  linear60gpsloss__odometry_filtered_map.csv
src/sensor_fusion/: CMakeLists.txt  README.md  package.xml
src/sensor_fusion/cfg/: fusion.cfg
src/sensor_fusion/config/: fusion.yaml
src/sensor_fusion/include/sensor_fusion/: Defs.hpp  Fusion.hpp  State.hpp  conversions.h  defs.hpp  filter_core.h  fusion.hpp
src/sensor_fusion/launch/: sensor_fusion.launch
src/sensor_fusion/src/: filter_core.cpp  fusion.cpp  fusion_node.cpp
src/teleop/: CMakeLists.txt  package.xml
src/teleop/launch/: kbd_teleop.launch  kbd_teleop_ca.launch  teleop.launch
src/teleop/scripts/: mario_teleop_key
